# chatty

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
chatty/: ai_client.py  config.py  logger.py  recording.py
src/: ai_client.py  config.py  logger.py  main.py  openai_client.py  recording.py
tests/: test_ai_client.py  test_logger.py  test_openai_client.py  test_recording.py
