[metadata]
name = chatty
description = ChatGPT AI assistant.
author = Scott Solkhon
author_email = scottsolkhon@gmail.com
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/ssolkhon/chatty

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Mac

[options]
#zip_safe = False
#packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.8

[options.packages.find]
where = chatty
exclude =
    tests

[options.entry_points]
console_scripts = chatty = main:main
